--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -32,12 +32,10 @@ body {
 
 .textLogo {
   display: block;
-  background-image: url(../images/logo-text-black.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 0 0;
   padding: 0;
-  text-indent: -100em;
   overflow: hidden;
 }
 
@@ -59,20 +57,16 @@ body {
 
 .textLogo--frontpage {
   position: absolute;
-  top: 132px;
+  top: 102px;
   left: 50%;
   transform: translateX(-50%);
   z-index: $zIndex-5--textlogo-frontpage;
-  margin: 0;
-  width: 276px;
-  height: 50px;
-  background-size: 100%;
+  margin: 0 0 50px 0;
   background-position: 0;
   opacity: 0.9;
 
   @media (max-width: $screen-xs-max) {
-    width: 182px;
-    height: 33px;
-    top: 99px;
+    font-size: 7vw;
+    top: 50px;
   }
 }
